--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,6 @@
     "express": "^4.18.2",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
-    "pdf-parse": "^1.1.1",
-    "youtube-transcript": "^1.2.1"
+    "pdf-parse": "^1.1.1"
   }
 }
