--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "lucide-react": "^0.452.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "three": "^0.165.0"
   },
   "devDependencies": {
@@ -25,5 +27,3 @@
     "vite": "^5.0.12"
   }
 }
-
-
